k8s/logstash_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: logstash
  template:
    metadata:
      labels:
        component: logstash
    spec:
      volumes:
        - name: logstash-config
          configMap:
            name: logstash-configmap
            items:
              - key: logstash.yml
                path: logstash.yml
        - name: logstash-pipeline-config
          configMap:
            name: logstash-configmap
            items:
              - key: logstash.conf
                path: logstash.conf
      containers:
        - name: logstash
          image: "sundeep55/elk_cluster_logstash:7.5.2"
          ports:
            - containerPort: 9600
            - containerPort: 5044
          volumeMounts:
            - name: logstash-config
              mountPath: /usr/share/logstash/config/logstash.yml
              subPath: logstash.yml
            - name: logstash-pipeline-config
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf
