k8s/elasticsearch_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  type: ClusterIP
  selector:
    component: elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
