k8s/kibana_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: ClusterIP
  selector:
    component: kibana
  ports:
    - port: 5601
      targetPort: 5601
