k8s/logstash_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
spec:
  type: ClusterIP
  selector:
    component: logstash
  ports:
    - port: 9600
      targetPort: 9600
      name: logstash-ui-port
    - port: 5044
      targetPort: 5044
      name: logstash-beat-port
