k8s/ingress-service.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-service
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: kibana-service
          servicePort: 5601
        path: /
